Länkat kartan till JSON för att få ut information såsom Län och kommun. Separerat JavaScript. Ändrat style.

--- a/leaflet.html
+++ b/leaflet.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>This is Leaflet map</h1>
-  <div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
+  <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
   <script>
     
 
