--- a/mapbox.html
+++ b/mapbox.html
@@ -9,7 +9,13 @@
     <title>MapBox example</title>
   </head>
   <body>
-    <div id='map' style='width: 100%; height: 450px;'></div>
+    <div id='map'></div>
     <script src='js/mapbox-js.js'></script>
+
+    <div id="information">
+      <h1 id="name"></h1>
+      <p id="id"><b></b></p>
+      <p id="description"></p>
+    </div>
   </body>
 </html>
