--- a/mapbox.html
+++ b/mapbox.html
@@ -11,6 +11,7 @@
   <body>
     <div id='map'></div>
     <script src='js/mapbox-js.js'></script>
+    <div id="map-overlay" class="map-overlay"></div>
 
     <div id="information">
       <h1 id="name"></h1>
