Skapat en objektklass för informationen, konverterat all hämtad data till objekt (riInfo).

--- a/mapbox.html
+++ b/mapbox.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id='map'></div>
+    <script src='js/RI_Info.js'></script>
     <script src='js/mapbox-js.js'></script>
     <div id="map-overlay" class="map-overlay"></div>
 
