--- a/mapbox.html
+++ b/mapbox.html
@@ -10,10 +10,15 @@
   </head>
   <body>
     <div id='map'></div>
-    <script src='js/RI_Info.js'></script>
-    <script src='js/mapbox-js.js'></script>
-    <div id="map-overlay" class="map-overlay"></div>
+    <script src='js/mapbox.js'></script>
+    <script src='js/main.js'></script>
+    <script src='js/data-handler.js'></script>
+    
+    <script src='js/national-interest.js'></script>
+    <script src='js/interaction.js'></script>
+    
 
+    <div id="map-overlay" class="map-overlay"></div>
     <div id="information">
       <h1 id="name"></h1>
       <p id="id"><b></b></p>
