Lagt till en ny fil som kan ta fram data på sökt RI_Id

--- a/mapbox.html
+++ b/mapbox.html
@@ -13,10 +13,11 @@
     <script src='js/mapbox.js'></script>
     <script src='js/main.js'></script>
     <script src='js/data-handler.js'></script>
-    
+    <script src="js/data-search.js"></script>
     <script src='js/national-interest.js'></script>
     <script src='js/interaction.js'></script>
-    
+
+    <input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">
 
     <div id="map-overlay" class="map-overlay"></div>
     <div id="information">
