--- a/leaflet.html
+++ b/leaflet.html
@@ -13,51 +13,27 @@
  integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
  crossorigin=""></script>
   <title>Document</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-  <h1>This is Leaflet map</h1>
   <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
-  <script>
-    
 
-	var mymap = L.map('mapid').setView([62.38583179, 16.321998712], 13);
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+    <script src="https://o11.se/RAA/proj4.js"></script>
+    <script src="https://o11.se/RAA/proj4leaflet.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
+    <script src='js/data-handler.js'></script>
+    <script src='js/leaflet.js'></script>
+    <script src='js/main.js'></script>
+    <script src="js/data-search.js"></script>
+    <script src='js/national-interest.js'></script>
 
-L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-  maxZoom: 18,
-  attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-    'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-  id: 'mapbox/streets-v11',
-  tileSize: 512,
-  zoomOffset: -1
-}).addTo(mymap);
-
-L.marker([62.38583179, 16.321998712]).addTo(mymap)
-  .bindPopup("<b>Hello world!</b><br />I am a popup.").openPopup();
-
-L.circle([62.38583179, 17.311898712], 1000, {
-  color: 'red',
-  fillColor: '#f03',
-  fillOpacity: 0.5
-}).addTo(mymap).bindPopup("I am SUNDSVALL.");
-
-L.polygon([
-  [51.509, -0.08],
-  [51.503, -0.06],
-  [51.51, -0.047]
-]).addTo(mymap).bindPopup("I am a polygon.");
-
-
-var popup = L.popup();
-
-function onMapClick(e) {
-  popup
-    .setLatLng(e.latlng)
-    .setContent("You clicked the map at " + e.latlng.toString())
-    .openOn(mymap);
-}
-
-mymap.on('click', onMapClick);
-
-  </script>
+    <input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">
+    <div id="map-overlay" class="map-overlay"></div>
+    <div id="information">
+      <h1 id="name"></h1>
+      <p id="id"><b></b></p>
+      <p id="description"></p>
+    </div>
 </body>
 </html>
