--- a/leaflet.html
+++ b/leaflet.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-  integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-  crossorigin=""/>
-   <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
- integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
- crossorigin=""></script>
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin="" />
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
   <title>Document</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
+
 <body>
+
+  <div class="sidepanel">
+    <div class="selection"><input type="text" placeholder="Sök" id="search"></div>
+    <!--<div class="selection"><input type="text" placeholder="Sök" id="county"></div>-->
+  </div>
   <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
 
-    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
-    <script src="https://o11.se/RAA/proj4.js"></script>
-    <script src="https://o11.se/RAA/proj4leaflet.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
-    <script src='js/data-handler.js'></script>
-    <script src='js/leaflet.js'></script>
-    <script src='js/main.js'></script>
-    <script src="js/data-search.js"></script>
-    <script src='js/national-interest.js'></script>
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+  <script src="https://o11.se/RAA/proj4.js"></script>
+  <script src="https://o11.se/RAA/proj4leaflet.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.5.0/proj4.js"></script>
+  <script src='js/data-handler.js'></script>
+  <script src='js/leaflet.js'></script>
+  <script src='js/main.js'></script>
+  <script src="js/data-search.js"></script>
+  <script src='js/national-interest.js'></script>
 
-    <input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">
-    <div id="map-overlay" class="map-overlay"></div>
-    <div id="information">
-      <h1 id="name"></h1>
-      <p id="id"><b></b></p>
-      <p id="description"></p>
-    </div>
+  <!--<input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">-->
+  <div id="map-overlay" class="map-overlay"></div>
+
+  <div id="information">
+    <h1 id="name"></h1>
+    <p id="id"><b></b></p>
+    <p id="description"></p>
+  </div>
 </body>
+
 </html>
