--- a/leaflet.html
+++ b/leaflet.html
@@ -21,7 +21,21 @@
 
   <div class="sidepanel">
     <div class="selection"><input type="text" placeholder="Sök" id="search"></div>
-    <!--<div class="selection"><input type="text" placeholder="Sök" id="county"></div>-->
+    <div class="selection">
+      <select class="county" id="county" name="county">
+        <option value="" selected>Län</option>
+      </select>
+    </div>
+    <div class="selection">
+      <select class="municipality" id="municipality" name="municipality">
+        <option value="" selected>Kommun</option>
+      </select>
+    </div>
+    <div class="selection">
+      <select class="landscape" id="landscape" name="landscape">
+        <option value="" selected>Landskap</option>
+      </select>
+    </div>
   </div>
   <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
 
