--- a/leaflet.html
+++ b/leaflet.html
@@ -33,6 +33,15 @@
       </select>
     </div>
 
+    <div id="culturalEnvironmentTypes" class="dropdown-check-list" tabindex="100">
+      <span class="anchor">Kulturmiljötyper</span>
+      <div class="itemsContainer">
+        <ul class="items">
+          <li><input type="checkbox" onclick="culturalEnvironmentFilter()"/>Apple </li>
+        </ul>
+      </div>
+    </div>
+
     <!--<div class="selection">
       <select class="landscape" id="landscape" name="landscape">
         <option value="" selected>Landskap</option>
@@ -53,7 +62,6 @@
 
   <!--<input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">-->
   <div id="map-overlay" class="map-overlay"></div>
-
   <div id="information">
   </div>
 </body>
