--- a/leaflet.html
+++ b/leaflet.html
@@ -49,7 +49,7 @@
     </div>-->
   </div>
   <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
-
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://o11.se/RAA/proj4.js"></script>
   <script src="https://o11.se/RAA/proj4leaflet.js"></script>
