Tog bort kommun och lade till hur många träffar.

--- a/leaflet.html
+++ b/leaflet.html
@@ -27,11 +27,11 @@
         <option value="" selected>Län</option>
       </select>
     </div>
-    <div class="selection">
+    <!--<div class="selection">
       <select class="municipality" id="municipality" name="municipality">
         <option value="" selected>Kommun</option>
       </select>
-    </div>
+    </div>-->
 
     <div id="culturalEnvironmentTypes" class="dropdown-check-list" tabindex="100">
       <span class="anchor">Kulturmiljötyper</span>
@@ -61,6 +61,7 @@
 
   <!--<input type="text" id="myInput" onkeyup="searchInput()" placeholder="Search for names..">-->
   <div id="map-overlay" class="map-overlay"></div>
+  <p id="showing"></p>
   <div id="information">
   </div>
 </body>
