--- a/leaflet.html
+++ b/leaflet.html
@@ -27,11 +27,11 @@
         <option value="" selected>Län</option>
       </select>
     </div>
-    <!--<div class="selection">
+    <div class="selection">
       <select class="municipality" id="municipality" name="municipality">
         <option value="" selected>Kommun</option>
       </select>
-    </div>-->
+    </div>
 
     <div id="culturalEnvironmentTypes" class="dropdown-check-list" tabindex="100">
       <span class="anchor">Kulturmiljötyper</span>
