--- a/leaflet.html
+++ b/leaflet.html
@@ -26,6 +26,7 @@
   <div class="divider"></div>
 
   <div class="sidepanel">
+    <div>
     <div class="selection"><input type="text" placeholder="Sök" id="search"></div>
     <div class="selection">
       <select class="county" id="county" name="county">
@@ -45,8 +46,9 @@
         </ul>
       </div>
     </div>
-    <div id="result-table">
-    </div>
+  </div>
+      <div id="result-table">
+      </div>
   </div>
   <div id="mapid" style="width: 100%; height: 600px; position: relative;"></div>
   <div id="map-overlay" class="map-overlay"></div>
